beta tested and bootstrap

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,21 +8,25 @@
 		<title>{{ title }}</title>
 		<meta charset="utf-8">
 		<meta name=viewport content="width=device-width initial scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<nav>
+		<nav class="nav">
 			{% if not currentUser() %}
-			<a href="/">Etusivu</a> -
-			<a href="/users/login">Kirjaudu</a> -
-			<a href="/users/register">Rekisteröidy</a>			
+			<a class="nav-link active" href="/">Etusivu</a> 
+			<a class="nav-link active" href="/users/login">Kirjaudu</a> 
+			<a class="nav-link active"  href="/users/register">Rekisteröidy</a>			
 			{% else %}
-			<a href="/">Etusivu</a> -
-			<a href="/users/logout">Kirjaudu ulos</a> -
-			<a href="/tournament/add">Luo uusi turnaus</a>
-			<p><b>Kirjautuneena: {{ currentUser() }}</b></p>
+			<a class="nav-link active" href="/">Etusivu</a> 
+			<a class="nav-link active" href="/users/logout">Kirjaudu ulos</a> 
+			<a class="nav-link active" href="/tournament/add">Luo uusi turnaus</a>
 			{% endif %}
 		</nav>
-
+		{% if currentUser() %}
+		<!-- <p><b>Kirjautuneena: {{ currentUser() }}</b></p> -->
+		<p>Mukana menossa: <span class="badge badge-secondary">{{ currentUser() }}</span></p>
+		{% endif %}
 		{% for msg in get_flashed_messages() %}
 			<p><b>{{ msg }}</b></p>
 		{% endfor %}
