--- a/templates/game.html
+++ b/templates/game.html
@@ -8,5 +8,5 @@
 		<p>{{ game }}</p>
 	{% endfor %}
 
-	<a href="/tournament/delete/{{ id }}">Poista turnaus</a>
+	<a href="/tournament/delete/{{ id }}" class="btn btn-danger">Poista turnaus</a>
 {% endblock content %}
