--- a/templates/new.html
+++ b/templates/new.html
@@ -11,6 +11,6 @@
 			{% endif %}
 				<p>{{ field }}</p>
 		{% endfor %}
-		<input type="submit" value={{ button }}>
+		<input type="submit" value={{ button }} class="btn btn-success">
 	</form>
 {% endblock content %}
