--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
 		<meta name=viewport content="width=device-width initial scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		
 	</head>
-	<body>
+	<body style="padding: 10px;">
 		<nav class="nav">
 			{% if not currentUser() %}
 			<a class="nav-link active" href="/">Etusivu</a> 
